RESOLVED FIXED160263
Fullscreen video zoom button does not work after rotating when aspect ratio matches display.
https://bugs.webkit.org/show_bug.cgi?id=160263
Summary Fullscreen video zoom button does not work after rotating when aspect ratio m...
Jeremy Jones
Reported 2016-07-27 12:40:03 PDT
Fullscreen video zoom button does not work after rotating when aspect ratio matches display.
Attachments
Patch (3.17 KB, patch)
2016-07-27 12:44 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2016-07-27 12:40:50 PDT
Jeremy Jones
Comment 2 2016-07-27 12:44:59 PDT
WebKit Commit Bot
Comment 3 2016-07-27 14:11:36 PDT
Comment on attachment 284718 [details] Patch Clearing flags on attachment: 284718 Committed r203792: <http://trac.webkit.org/changeset/203792>
WebKit Commit Bot
Comment 4 2016-07-27 14:11:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.